--- a/boleta-web/src/main/webapp/app/envio.xhtml
+++ b/boleta-web/src/main/webapp/app/envio.xhtml
@@ -12,18 +12,20 @@
             </p:messages>
             <div class="ui-g">
                 <div class="ui-g-12">
-                    <p:panel id="pnlFile" visible="#{boletaMB.visible}">
+                    <p:panel id="pnlFile">
                         <p:outputLabel value="Seleccione el archivo a procesar"/>
                         <br/>
                         <br/>
-                        <p:fileUpload fileUploadListener="#{boletaMB.handleFileUpload}" mode="advanced" fileLimit="1"
-                                      skinSimple="true" auto="true" label="Seleccionar" allowTypes="/(\.|\/)(pdf)$/" />
+                        <p:fileUpload fileUploadListener="#{boletaMB.handleFileUpload}" mode="advanced"
+                                      skinSimple="true" auto="true" label="Seleccionar" allowTypes="/(\.|\/)(pdf)$/" update="pnlPendiente pnlProcesado"/>
                         <br/>
                         <br/>
                         <p:outputLabel value="Seleccione un mes y año"/> <p:spacer width="10"/>
                         <p:calendar pattern="MM_yyyy" value="#{boletaMB.fecha}" size="7">
                             <p:ajax event="dateSelect" listener="#{boletaMB.cargarArchivos()}" update="pnlPendiente pnlProcesado"/>
                         </p:calendar>
+                        <br/>
+                        <p:commandButton value="Verificar" action="#{boletaMB.verificarArchivosPendientes()}"/>
                     </p:panel>
                 </div>
                 <div class="ui-g-12  ui-lg-6">
