--- a/envioCorreo/src/main/webapp/index.xhtml
+++ b/envioCorreo/src/main/webapp/index.xhtml
@@ -9,8 +9,17 @@
     </h:head>
     <h:body>
         <h:form>
-            <p:inputText value="#{enviarCorreoMB.codigoUltimo}"/>
-            <p:commandButton value="Enviar" action="#{enviarCorreoMB.buscarCodigoUltimo()}"/>
+            <p:panelGrid columns="2">
+                <p:outputLabel value="usuario: "/>
+                <p:inputText value="#{enviarCorreoMB.usuario}" size="50"/> 
+                <p:outputLabel value="clave: "/>
+                <p:inputText value="#{enviarCorreoMB.clave}"/>
+                <p:outputLabel value="codDepa: "/>
+                <p:inputText value="#{enviarCorreoMB.codDepa}"/>
+                <f:facet name="footer">
+                    <p:commandButton value="Enviar" action="#{enviarCorreoMB.enviarCorreos()}"/>
+                </f:facet>
+            </p:panelGrid>
         </h:form>
 
         <p:ajaxStatus style="display:block;margin-bottom:2em;height:24px;">
