--- a/boleta-web/src/main/webapp/app/index.xhtml
+++ b/boleta-web/src/main/webapp/app/index.xhtml
@@ -26,6 +26,8 @@
                     <p:commandButton value="Separar" action="#{enviarCorreoMB.separacionDeBoletas()}"/>
                     <p:commandButton value="Separar Todo" action="#{enviarCorreoMB.separacionDeBoletasTotal()}"/>
                     <p:commandButton value="Enviar 1 solo correo" action="#{enviarCorreoMB.enviarUnSoloCorreo()}"/>
+                    <p:spacer width="10"/>
+                    <p:commandButton value="Enviar URL" action="#{enviarCorreoMB.enviarUrl()}"/>
                 </f:facet>
             </p:panelGrid>
         </h:form>
