--- a/paquescolar-web/src/main/webapp/app/reg02ReservaFondos.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg02ReservaFondos.xhtml
@@ -27,7 +27,8 @@
         </p:panel>
         <div class="ui-g">
             <div class="ui-g-12">
-                <div class="card"><h1>
+                <div class="card">
+                    <h1>
                         <i class="fa fa-filter blue" style="font-size: 16px;"></i>
                         <p:spacer width="10" height="8"/>
                         <p:outputLabel value="Filtro de busqueda"/>
