--- a/paquescolar-web/src/main/webapp/app/comunes/datosGenProveedor.xhtml
+++ b/paquescolar-web/src/main/webapp/app/comunes/datosGenProveedor.xhtml
@@ -7,7 +7,7 @@
     <h1>
         <i class="fa fa-id-card-o" style="font-size: 16px;" aria-hidden="true"></i>
         <p:spacer width="10" height="8"/>
-        <p:outputLabel value="Datos de #{proveedorController.empresa.razonSocial}"/>
+        <p:outputLabel id="lblNombreEmpresa" value="Datos de #{proveedorController.empresa.razonSocial}"/>
     </h1>
     <p:accordionPanel id="pnlFoto">
         <p:tab title="Información General">
