--- a/paquescolar-web/src/main/webapp/app/con03AdjuProveedores.xhtml
+++ b/paquescolar-web/src/main/webapp/app/con03AdjuProveedores.xhtml
@@ -23,7 +23,7 @@
 
                     <p:panel visible="false">
                         <p:commandButton id="btnModificar" value="ok" actionListener="#{proveedorController.filtroProveedores}">
-                            <p:ajax event="dialogReturn" listener="#{proveedorController.buscarAdjudicacionesProveedor}"  update="pnlFoto adjudicaciones" />
+                            <p:ajax event="dialogReturn" listener="#{proveedorController.buscarAdjudicacionesProveedor}"  update="pnlFoto adjudicaciones lblNombreEmpresa" />
                         </p:commandButton>
                     </p:panel>
 
